<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Reflow</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Soak_time">Soak Time in Seconds</string>
    <string name="Soak_temp">Soak Temp in Celsius</string>
    <string name="Max_temp">Max Temp in Celsuis</string>
    <string name="toggle_on">Emergency Stop</string>
    <string name="toggle_off">Start Reflow Process</string>
    <string name="viewGraph">View Graph</string>
    <string name="currentState">Current State</string>
    <string name="refresh">Refresh</string>
    <string name="default_soak_temp">150</string>
    <string name="default_soak_time">120</string>
    <string name="default_max_temp">235</string>
    <string name="local_service_connected">Connected to service</string> 
	<string name="local_service_disconnected">Disconnected from service</string> 
	<string name="reflow_temp">Reflow Temp in Celsius</string> 
	<string name="reflow_time">Reflow Time in Seconds</string> 
	<string name="default_reflow_time">40</string> 
	<string name="default_reflow_temp">217</string> 
</resources>