<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".Main_screen" >

    <EditText
        android:id="@+id/editMTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/toggleButton1"
        android:layout_alignEnd="@dimen/activity_vertical_margin"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:layout_alignRight="@+id/toggleButton1"
        android:layout_marginLeft="16dp"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_max_temp" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editMTemp"
        android:layout_alignLeft="@+id/editMTemp"
        android:text="@string/Max_temp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ToggleButton
        android:id="@+id/toggleButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:textOff="@string/toggle_off" 
		android:textOn="@string/toggle_on"/>

    <Button
        android:id="@+id/refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:text="@string/viewGraph" />

    <EditText
        android:id="@+id/reflowTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView3"
        android:layout_alignLeft="@+id/textView3"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_reflow_time" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reflowTime"
        android:layout_alignRight="@+id/textView5"
        android:text="@string/reflow_time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/reflowTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView6"
        android:layout_alignLeft="@+id/textView5"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_reflow_temp" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/reflowTemp"
        android:layout_alignLeft="@+id/editSTime"
        android:text="@string/reflow_temp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editSTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView5"
        android:layout_alignLeft="@+id/reflowTime"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_soak_time" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editSTime"
        android:layout_alignLeft="@+id/editSTime"
        android:text="@string/Soak_time"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <EditText
        android:id="@+id/editSTemp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/textView2"
        android:layout_alignLeft="@+id/textView2"
        android:ems="10"
        android:inputType="number"
        android:text="@string/default_soak_temp" />

    <TextView
        android:id="@+id/tempa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/editSTemp"
        android:layout_alignLeft="@+id/editSTemp"
        android:text="@string/Soak_temp"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/tempa"
        android:layout_alignLeft="@+id/tempa"
        android:layout_alignRight="@+id/refresh" />

    <TextView
        android:id="@+id/currentState"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/progressBar1"
        android:layout_centerHorizontal="true"
        android:text="@string/currentState"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/currentState"
        android:layout_centerHorizontal="true"
        android:text="@string/currentState"
        android:textAppearance="?android:attr/textAppearanceSmall" />

</RelativeLayout>
